kubernetes/components/gatus/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gatus
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow gatus to access all pods in this namespace for health checks
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gatus
